fix sidebar component position and alignment

--- a/theme/sass/components/_blog-sidebar-component.scss
+++ b/theme/sass/components/_blog-sidebar-component.scss
@@ -8,6 +8,7 @@
     text-align: center;
     font-size: $font-large;
     color: $tertiary-color;
+    margin-top: 0;
   }
 
   ul {
